[tool.poetry]
name = "sage"
version = "0.1.0"
description = "A CLI tool for managing SageMaker resources"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
sagemaker = "^2.173.0"
boto3 = "^1.28.15"
pre-commit = "^3.3.1"
requests = "^2.31.0"
torch = ">=2.0.0, !=2.0.1"

[tool.poetry.scripts]
sage = "sage.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
